dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=wusiond.1
endif

if ENABLE_QT
  dist_man1_MANS+=wusion-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=wusion-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=wusion-tx.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=wusion-wallet.1
endif
endif
